--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^12.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
@@ -17,7 +21,9 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
